Fixed background image bug on mobile devices

--- a/src/App.module.css
+++ b/src/App.module.css
@@ -13,6 +13,9 @@
 @media (max-width: 1000px) {
 	.body {
     height: 100%;
+    min-height: 100vh;
+    background-size: cover;
+    background-color: rgb(181, 209, 217, 0.5);
 	}
 }
 
